--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/styled-components": "^4.4.2",
+    "@types/uuid": "^3.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "global": "^4.4.0",
