--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-sass": "^4.0.2",
     "jquery": "^3.4.1",
+    "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "popper": "^1.0.1",
@@ -36,6 +37,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.0.0",
     "typescript": "^3.7.4",
     "uuid": "^3.4.0"
