--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/bootstrap": "^4.3.1",
+    "@types/downscale": "^1.0.0",
     "@types/moment": "^2.13.0",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-redux": "^7.1.7",
@@ -18,6 +19,7 @@
     "@types/uuid": "^3.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
+    "downscale": "^1.0.6",
     "global": "^4.4.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
